Alignment of cross solved

--- a/src/styles/_strength.scss
+++ b/src/styles/_strength.scss
@@ -15,10 +15,9 @@
     color: white;
     background: linear-gradient(138deg ,#FC5D73 ,#FF993F);
     .img {
-      display: block;
-      position: absolute;
-      left: 47%;
-      top: 28%;
+      display: flex;
+      justify-content: flex-end;
+      
     }
     .title{
       font-size: 16px;
